# Numerai

./: .gitignore  download_data.py  lgbm_sklearn_model.pkl  main.py  numerai.ipynb  pyproject.toml  submission_round_1231.csv  submission_round_1232.csv  submission_round_1233.csv  submission_round_1234.csv
.ipynb_checkpoints/: main-checkpoint.py  numer-checkpoint.env  numerai-checkpoint.ipynb
