[project]
name = "numerai-init-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numerapi>=2.22.0",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "pyarrow>=23.0.1",
    "pynvim>=0.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
]
