[project]
name = "numerai-init-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.17.1",
    "ipywidgets>=8.1.5",
    "joblib>=1.5.3",
    "jupyterlab>=3.6.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.0",
    "nbdime>=4.0.4",
    "numerapi>=2.22.0",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pip>=24.1.2",
    "pyarrow>=23.0.1",
    "pynvim>=0.6.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0+cu128",
    "xgboost>=3.2.0",
]
